RESOLVED FIXED 27946
[commit+] PluginView.h included in Page.cpp breaks Chromium build
https://bugs.webkit.org/show_bug.cgi?id=27946
Summary [commit+] PluginView.h included in Page.cpp breaks Chromium build
Tony Chang
Reported 2009-08-03 10:36:28 PDT
In r46649, an include for PluginView.h was added to Page.cpp. Chromium doesn't use PluginView.h so this causes a build break for us. I'm not sure what the right fix is, but simply removing the include seems to allow Chromium to compile since the pointer never needs to be dereferenced. I'll upload a patch with an if !PLATFORM(CHROMIUM), although I'm not sure that's the right way to fix this.
Attachments
v1 (1.10 KB, patch)
2009-08-03 10:48 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2009-08-03 10:48:45 PDT
Created attachment 33991 [details] v1 Actually, just remove the include on all platforms since it's not needed anywhere for the reason mentioned above.
Adam Barth
Comment 2 2009-08-03 11:20:42 PDT
Assigned for landing.
Adam Barth
Comment 3 2009-08-03 11:47:36 PDT
Comment on attachment 33991 [details] v1 Clearing review flag on attachment: 33991 Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/page/Page.cpp Committed r46726 M JavaScriptCore/wtf/FastMalloc.cpp M JavaScriptCore/ChangeLog r46724 = 056fc244b7649a0b3a8df71d4f3a5944f92e9241 (trunk) M JavaScriptCore/wtf/FastMalloc.cpp M JavaScriptCore/ChangeLog r46725 = 4d74f16e1ad25e92277cb09ec5cda6ab62bb1607 (trunk) M WebCore/ChangeLog M WebCore/page/Page.cpp r46726 = 5692de3f2b92d7b7a4600c2dbe329a81192f194b (trunk) First, rewinding head to replay your work on top of it... Nothing to do. http://trac.webkit.org/changeset/46726
Adam Barth
Comment 4 2009-08-03 11:47:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.