2009-08-03  Tony Chang  <tony@chromium.org>

Reviewed by Darin Adler.

        Fix Chromium build by removing PluginView.h from Page.cpp.
        Chromium doesn't use PluginView and the pointer is never
        dereferenced so the header doesn't need to be included.
        https://bugs.webkit.org/show_bug.cgi?id=27946

        No new tests because this is a build fix.

        * page/Page.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@46726 bbb929c8-8fbe-4397-9dbb-9b2b20218538