third_party/WebKit/WebCore/page/Page.cpp
@@ -46,7 +46,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "NetworkStateNotifier.h"
 #include "PageGroup.h"
 #include "PluginData.h"
-#include "PluginView.h"
 #include "ProgressTracker.h"
 #include "RenderWidget.h"
 #include "RenderTheme.h"
